--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
   },
   "homepage": "https://github.com/JoncoLab/jonco#readme",
   "devDependencies": {
+    "firebase": "^4.4.0",
+    "firebase-tools": "^3.12.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-csscomb": "^3.0.8",
     "gulp-image": "^2.10.1",
-    "gulp-minify": "^1.0.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^3.1.0",
     "gulp-zip": "^4.0.0",
-    "rimraf": "^2.6.1",
-    "vinyl-ftp": "^0.6.0"
+    "rimraf": "^2.6.1"
   }
 }
