--- a/functions/package.json
+++ b/functions/package.json
@@ -2,8 +2,10 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "aws-sdk": "^2.122.0",
     "firebase-admin": "~5.2.1",
-    "firebase-functions": "^0.6.2"
+    "firebase-functions": "^0.6.2",
+    "nodemailer": "^4.1.0"
   },
   "private": true
 }
